# sudoku

./: Cargo.toml  HardestDatabase110626.txt  README  allow_profiling.sh  expected.txt  hard-sudoku.txt  sudoku-with-c.py  sudoku-with-c.zig  sudoku.c  sudoku.cpp  sudoku.h  sudoku.nim  sudoku.py  sudoku.rs  sudoku.zig  test.sh  test_rust_perf.sh  test_speed.sh  tester.c
