[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1
opt-level = 3
lto = true

[dependencies]
bitintr = "0.3.0"
clap = { version = "4.5.16", features = ["derive"] }

[[bin]]
name = "sudoku_rust"
path = "sudoku.rs"
